<resources>
    <string name="app_name">PointSnaps</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello login fragment</string>
    <string name="hello_reg_fragment">registrr</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="select_photo">Select photo</string>
    <string name="your_location">Your location:</string>
    <string name="add_description">Add description</string>
    <string name="add_location">Add location</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="upload_from_gallery">Upload from Gallery</string>
    <string name="upload">Upload</string>
    <string name="point">Point</string>
    <string name="snaps">Snaps</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="company_code">Company code</string>
    <string name="full_name">Full name</string>
    <string name="fill_fields">Please fill all fields!</string>
    <string name="full_name_validation_toast">Please specify FULL NAME like: \'NAME LASTNAME\'</string>
    <string name="success_upload">Successfully uploaded image!</string>
    <string name="must_login">You must be logged in if you want to upload a image!</string>
    <string name="logout_toast">You have been logged out!</string>
    <string name="loc_not_set">Location is not set</string>

</resources>
